# Pumpkin

./: Cargo.toml  VANILLA_PARITY.md  docker-compose.yml
.agents/tasks/task-embed-dashboard-in-rust/features/: FEAT-003.json
.agents/tasks/task-fix-entity-system/features/: FEAT-001.json  FEAT-002.json  FEAT-003.json  FEAT-004.json  FEAT-005.json
.agents/tasks/task-web-dashboard/: task.json
.agents/tasks/task-web-dashboard/features/: FEAT-001.json  FEAT-002.json
dashboard/: .env.example  Dockerfile  README.md  package-lock.json  package.json
dashboard/public/: index.html
dashboard/public/css/: style.css
dashboard/public/js/: app.js  console.js  players.js  settings.js
dashboard/src/: config.js  rcon-client.js  server.js
dashboard/src/routes/: console.js  index.js  players.js  power.js  settings.js  status.js
dashboard/test/: api.test.js
pumpkin/: Cargo.toml
pumpkin-config/src/: lib.rs
pumpkin-config/src/networking/: dashboard.rs  mod.rs
pumpkin-dashboard/: Cargo.toml
pumpkin-dashboard/assets/: index.html
pumpkin-dashboard/assets/css/: style.css
pumpkin-dashboard/assets/js/: app.js  components.js
pumpkin-dashboard/src/: auth.rs  console.rs  lib.rs  provider.rs
pumpkin-dashboard/src/api/: console.rs  mod.rs  players.rs  server.rs
pumpkin/src/: lib.rs  main.rs
pumpkin/src/entity/: type.rs
pumpkin/src/entity/ai/goal/: active_target.rs  blaze_attack.rs  melee_attack.rs  (+2 more)
pumpkin/src/entity/mob/: mod.rs
pumpkin/src/entity/projectile/: small_fireball.rs
pumpkin/src/net/: dashboard.rs  mod.rs
pumpkin/src/net/dashboard/: mod.rs
(+3 files in other folders)
