[package]
name = "pumpkin-dashboard"
version.workspace = true
description = "Embedded web dashboard for the Pumpkin Minecraft server."
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
rust-embed = "8"
mime_guess = "2"
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hyper = { workspace = true }
pumpkin-config = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
